--- a/style.css
+++ b/style.css
@@ -20,6 +20,7 @@
     border: 1px solid white;
     cursor: pointer;
 }
+
 #start:hover {
     transition: 1s;
     transform: scale(1.05);
@@ -37,21 +38,22 @@
     border-radius: 10px;
     box-shadow: 0 0 5px white;
 }
+
 #health:hover {
     transition: 1s;
     transform: scale(1.05);
 }
 
-.monster {
+.Zombie {
 	width:200px;
     height: 350px;
 	position: absolute;
 	bottom: 0;
-    animation-name: monsters;
+    animation-name: Zombies;
     animation-duration: 40s;
 }
 
-@keyframes monsters {
+@keyframes Zombies {
     5% {
         left: 85%;
         transform: scale(1.5);
@@ -134,17 +136,18 @@
     }
 }
 
-
-.monster.showing {
+.Zombie.showing {
 	bottom: 0;
 }
 
-.monster.shooting {
+#killBoxGame.shooting {
     background-color: red;
+    opacity: 50%;
 }
 
-.monster.dead {
+.Zombie.dead {
     display: none;
+    opacity: 0%;
 	height: 20px;
 }
 
